# ai-tool-rules-migrator

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: 2026-03-19-ai-tool-rules-migrator-design.md  2026-03-19-ai-tool-rules-migrator-plan.md
src/ai_rules/: __init__.py  cli.py  config.py  inventory.py  models.py  state.py  store.py  sync.py
src/ai_rules/parsers/: __init__.py  base.py  claude_code.py  copilot.py  cursor.py  markdown_utils.py
tests/: test_cli.py  test_config.py  test_inventory.py  test_models.py  test_state.py  test_store.py  test_sync.py
tests/fixtures/: sample_claude.md  sample_config.yaml  sample_copilot_instructions.md
tests/fixtures/cursor_rules/: backend-rules.mdc  database-conventions.mdc
tests/test_parsers/: test_claude_code.py  test_copilot.py  test_cursor.py  test_markdown_utils.py
universal-rules/: claude.md
